--- a/logisticreg.ipynb
+++ b/logisticreg.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic regression individual analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
@@ -421,7 +428,7 @@
     }
    ],
    "source": [
-    "# train data with linear svm\n",
+    "# train data with logistic regression\n",
     "train <- train_dataset[, genesig]\n",
     "train$label <- train_dataset$label\n",
     "classifier.logreg <- glm(label ~ ., data = train,family = binomial)"
@@ -678,208 +685,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "2586"
-      ],
-      "text/latex": [
-       "2586"
-      ],
-      "text/markdown": [
-       "2586"
-      ],
-      "text/plain": [
-       "[1] 2586"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>1</li>\n",
-       "\t<li>2</li>\n",
-       "\t<li>3</li>\n",
-       "\t<li>4</li>\n",
-       "\t<li>5</li>\n",
-       "\t<li>6</li>\n",
-       "\t<li>7</li>\n",
-       "\t<li>8</li>\n",
-       "\t<li>9</li>\n",
-       "\t<li>10</li>\n",
-       "\t<li>11</li>\n",
-       "\t<li>12</li>\n",
-       "\t<li>13</li>\n",
-       "\t<li>14</li>\n",
-       "\t<li>15</li>\n",
-       "\t<li>16</li>\n",
-       "\t<li>17</li>\n",
-       "\t<li>18</li>\n",
-       "\t<li>19</li>\n",
-       "\t<li>20</li>\n",
-       "\t<li>21</li>\n",
-       "\t<li>22</li>\n",
-       "\t<li>23</li>\n",
-       "\t<li>24</li>\n",
-       "\t<li>25</li>\n",
-       "\t<li>26</li>\n",
-       "\t<li>27</li>\n",
-       "\t<li>28</li>\n",
-       "\t<li>29</li>\n",
-       "\t<li>30</li>\n",
-       "\t<li>31</li>\n",
-       "\t<li>32</li>\n",
-       "\t<li>33</li>\n",
-       "\t<li>34</li>\n",
-       "\t<li>35</li>\n",
-       "\t<li>36</li>\n",
-       "\t<li>37</li>\n",
-       "\t<li>38</li>\n",
-       "\t<li>39</li>\n",
-       "\t<li>40</li>\n",
-       "\t<li>41</li>\n",
-       "\t<li>42</li>\n",
-       "\t<li>43</li>\n",
-       "\t<li>44</li>\n",
-       "\t<li>45</li>\n",
-       "\t<li>46</li>\n",
-       "\t<li>47</li>\n",
-       "\t<li>48</li>\n",
-       "\t<li>2586</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 1\n",
-       "\\item 2\n",
-       "\\item 3\n",
-       "\\item 4\n",
-       "\\item 5\n",
-       "\\item 6\n",
-       "\\item 7\n",
-       "\\item 8\n",
-       "\\item 9\n",
-       "\\item 10\n",
-       "\\item 11\n",
-       "\\item 12\n",
-       "\\item 13\n",
-       "\\item 14\n",
-       "\\item 15\n",
-       "\\item 16\n",
-       "\\item 17\n",
-       "\\item 18\n",
-       "\\item 19\n",
-       "\\item 20\n",
-       "\\item 21\n",
-       "\\item 22\n",
-       "\\item 23\n",
-       "\\item 24\n",
-       "\\item 25\n",
-       "\\item 26\n",
-       "\\item 27\n",
-       "\\item 28\n",
-       "\\item 29\n",
-       "\\item 30\n",
-       "\\item 31\n",
-       "\\item 32\n",
-       "\\item 33\n",
-       "\\item 34\n",
-       "\\item 35\n",
-       "\\item 36\n",
-       "\\item 37\n",
-       "\\item 38\n",
-       "\\item 39\n",
-       "\\item 40\n",
-       "\\item 41\n",
-       "\\item 42\n",
-       "\\item 43\n",
-       "\\item 44\n",
-       "\\item 45\n",
-       "\\item 46\n",
-       "\\item 47\n",
-       "\\item 48\n",
-       "\\item 2586\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 1\n",
-       "2. 2\n",
-       "3. 3\n",
-       "4. 4\n",
-       "5. 5\n",
-       "6. 6\n",
-       "7. 7\n",
-       "8. 8\n",
-       "9. 9\n",
-       "10. 10\n",
-       "11. 11\n",
-       "12. 12\n",
-       "13. 13\n",
-       "14. 14\n",
-       "15. 15\n",
-       "16. 16\n",
-       "17. 17\n",
-       "18. 18\n",
-       "19. 19\n",
-       "20. 20\n",
-       "21. 21\n",
-       "22. 22\n",
-       "23. 23\n",
-       "24. 24\n",
-       "25. 25\n",
-       "26. 26\n",
-       "27. 27\n",
-       "28. 28\n",
-       "29. 29\n",
-       "30. 30\n",
-       "31. 31\n",
-       "32. 32\n",
-       "33. 33\n",
-       "34. 34\n",
-       "35. 35\n",
-       "36. 36\n",
-       "37. 37\n",
-       "38. 38\n",
-       "39. 39\n",
-       "40. 40\n",
-       "41. 41\n",
-       "42. 42\n",
-       "43. 43\n",
-       "44. 44\n",
-       "45. 45\n",
-       "46. 46\n",
-       "47. 47\n",
-       "48. 48\n",
-       "49. 2586\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1]    1    2    3    4    5    6    7    8    9   10   11   12   13   14   15\n",
-       "[16]   16   17   18   19   20   21   22   23   24   25   26   27   28   29   30\n",
-       "[31]   31   32   33   34   35   36   37   38   39   40   41   42   43   44   45\n",
-       "[46]   46   47   48 2586"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "which(colnames(train_dataset) == alt.genesig[49])\n",
-    "alt.genesig.ind <- c(1:49)\n",
-    "alt.genesig.ind[49] <- which(colnames(train_dataset) == alt.genesig[49])\n",
-    "alt.genesig.ind"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [
@@ -1062,15 +867,6 @@
     "    alt.genesig.ind[j] <- which(colnames(train_dataset) == alt.genesig[j])\n",
     "}\n",
     "alt.genesig.ind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colnames(train_dataset)"
    ]
   },
   {
