Reran notebooks to ensure seed is correctly set.... it is.

--- a/genesignature.ipynb
+++ b/genesignature.ipynb
@@ -20,17 +20,48 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  There is a binary version available but the source version is later:\n",
+      "       binary source needs_compilation\n",
+      "glmnet  4.1-1  4.1-6              TRUE\n",
+      "\n",
+      "  Binaries will be installed\n",
+      "package 'glmnet' successfully unpacked and MD5 sums checked\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Updating HTML index of packages in '.Library'\n",
+      "Warning message:\n",
+      "\"cannot remove prior installation of package 'glmnet'\"\n",
+      "Warning message in file.copy(savedcopy, lib, recursive = TRUE):\n",
+      "\"problem copying C:\\Users\\nicol\\Anaconda3\\Lib\\R\\library\\00LOCK\\glmnet\\libs\\x64\\glmnet.dll to C:\\Users\\nicol\\Anaconda3\\Lib\\R\\library\\glmnet\\libs\\x64\\glmnet.dll: Permission denied\"\n",
+      "Warning message:\n",
+      "\"restored 'glmnet'\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Making 'packages.html' ...\n",
-      " done\n",
-      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\nicol\\AppData\\Local\\Temp\\RtmpwDvlQe\\downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "\"package 'glmnet' was built under R version 3.6.3\"\n",
       "Loading required package: Matrix\n",
       "\n",
-      "Loaded glmnet 4.1-6\n",
+      "Loaded glmnet 4.1-1\n",
       "\n"
      ]
     }
@@ -57,12 +88,10 @@
     {
      "data": {
       "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'test_dataset'</li><li>'train_dataset'</li></ol>\n"
+       "<ol class=list-inline>\n",
+       "\t<li>'test_dataset'</li>\n",
+       "\t<li>'train_dataset'</li>\n",
+       "</ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -85,7 +114,7 @@
     }
    ],
    "source": [
-    "load(path.expand(\"~/proj/data.RData\"))\n",
+    "load(path.expand(\"data.RData\"))\n",
     "ls()"
    ]
   },
@@ -353,7 +382,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
